2011-01-29  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Add more API. Emulate GetStartupInfoA more.

2011-01-29  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.h:
	* src/bmltest_process.h:
	  Fix double free.

2011-01-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update TODO list and results from latest bml for another setup.

2011-01-10  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.h:
	  Filter newlines in command output.

	* tests/testmachine.sh:
	  Improve report: lowercase dlls (takes less space), print extra
	  commands.

2011-01-10  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper/wine/win32.c:
	  Improve faking our indentity. Fixes cheapo spread :).

2011-01-09  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper/wine/win32.c:
	  Also register MSVCRTD (debug variant). Fixes one more machine.

2011-01-09  Stefan Kost  <ensonic@users.sf.net>

	* tests/testmachine.sh:
	  Fix link for sortable.js. Add more cmdline tricks for log analysis.

2011-01-09  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader.dll:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.ncb:
	* src/BuzzMachineLoader/BuzzMachineLoader.suo:
	  Callbacks::GetWave() should not return NULL, but a empty slot instead.
	  Fixes a few more machines (e.g. whitenoise looper 2).

2011-01-09  Stefan Kost  <ensonic@users.sf.net>

	* tests/testmachine.sh:
	  Place all generates files in subdir to easy keeping snapshots.

2010-11-25  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.c:
	  Add a comment about an issue on x86 when not having any win32 dlls.

2010-10-06  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/ldt_keeper.c:
	  Init a var.

2010-09-24  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Use {} for if statements then have a DBG output to fix release